objects/sharinpix__SharinPixAlbum__c.object
<CustomObject>
    <description>A SharinPix object which, when created, will already have a token ready to be used on mobile.</description>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>SharinPix Albums</relationshipLabel>
        <relationshipName>SharinPix_Albums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sharinpix__AlbumId__c</fullName>
        <description>The SharinPix album ID</description>
        <label>Album Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__SharinPix_Token_Part_1__c</fullName>
        <description>SharinPix token which will be populated by a trigger</description>
        <label>SharinPix Token Part 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__SharinPix_Token_Part_2__c</fullName>
        <description>SharinPix token which will be populated by a trigger (if length exceeds character limit)</description>
        <label>SharinPix Token Part 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__SharinPix_Token_Part_3__c</fullName>
        <description>SharinPix token which will be populated by a trigger (if length exceeds character limit)</description>
        <label>SharinPix Token Part 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__SharinPix_Token__c</fullName>
        <description>All parts of SharinPix token merged</description>
        <formula>sharinpix__SharinPix_Token_Part_1__c +  sharinpix__SharinPix_Token_Part_2__c + sharinpix__SharinPix_Token_Part_3__c</formula>
        <label>SharinPix Token</label>
        <type>Text</type>
    </fields>
    <label>SharinPix Album</label>
    <nameField>
        <label>Album Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SharinPix Albums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>